# moonchild-3ds

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  compileandinstallsdl.sh  crash_dump_00000070.dmp  moonchild  run.sh  run3ds.sh
assets/moonchild/: lvl00.des  lvl11.des  lvl22.des  lvl23.des  lvl24.des  lvl41.des  mc.txt  pal4.asc
cmake/: FindCTRULIB.cmake
output/: dump.dmp
resources/: AppInfo
src/: Audio.cpp  Audio.h  Game.cpp  Game.h  Util.cpp  Util.h  livesplit.cpp  livesplit.hpp  main.cpp  zed_net.c
src/framewrk/: audio.cpp  audio.hpp  blitbuf.cpp  direc.h  fastfile.cpp  fastfile.h  ffent.h  frm_int.hpp  frm_wrk.hpp  movie.cpp  movie.hpp  mydefs.hpp  pcx.hpp  pcxff.cpp  pcxff.hpp  sprite.cpp  sprite.hpp  timer.cpp  timer.hpp  unzip.c  video.cpp  video.hpp  window.h  windows.cpp
src/moonchild/: anim.cpp  anim.hpp  assem.hpp  asset.cpp  asset.hpp  asteroid.cpp  asteroid.hpp  basic.cpp  basic.hpp  bat.cpp  bat.hpp  bbot.cpp  bbot.hpp  bee.cpp  bee.hpp  bolt.cpp  bolt.hpp  bonus.cpp  bonus.hpp  boss.cpp  boss.hpp  bouncey.cpp  bouncey.hpp  bullet.cpp  bullet.hpp  bump.cpp  bump.hpp  cannon.cpp  cannon.hpp  chain.cpp  chain.hpp  claw.cpp  claw.hpp  cloud.cpp  cloud.hpp  diamond.cpp  diamond.hpp  doldoler.cpp  doldoler.hpp  editor.cpp  (+95 more)
